# pyorm

./: .gitignore  pyproject.toml
pyorm/connect/: connection.py
pyorm/connect/connectors/: mysql_c.py  sqlite_c.py
pyorm/models/: columns.py  model.py
pyorm/models/db/: model.py  mysql.py  sqlite.py
pyorm/models/queries/: mysql_query.py  normalizer.py  sql_query.py  sqlite_query.py
pyorm/testing/: test_connect.py  test_migration.py  test_queries.py
