[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyorm-uwine"
version = '0.0.2'
description = "ORM for Python."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'mysql-connector-python',
    'pytest',
]

[tool.setuptools.packages.find]
include = ["pyorm*"]
namespaces = false